--- a/src/components/dialogs/logout_dialog/styles.css
+++ b/src/components/dialogs/logout_dialog/styles.css
@@ -3,5 +3,5 @@
 }
 
 .MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-	color: var(--column-font-color);
+	color: var(--notes-font-color);
 }
