--- a/src/views/main/faq_hub/styles.css
+++ b/src/views/main/faq_hub/styles.css
@@ -12,7 +12,7 @@
 }
 
 .select-faq__button .MuiButton-outlinedPrimary {
-	border-color: var(--column-font-color);
+	border-color: var(--base-font-color);
 }
 
 .select_faq_button {
