--- a/src/views/main/notes/note_create_dialog/styles.css
+++ b/src/views/main/notes/note_create_dialog/styles.css
@@ -14,5 +14,5 @@
 
 .note_create_dialog
 	.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-	color: var(--column-font-color);
+	color: var(--base-font-color);
 }
