--- a/src/components/button/google_login/styles.css
+++ b/src/components/button/google_login/styles.css
@@ -13,7 +13,7 @@
 }
 
 .google_login_button__button button {
-	background-color: var(--note-background);
+	background-color: var(--light-color);
 	padding-top: 0.625rem;
 	padding-bottom: 0.625rem;
 	padding-left: 1.563rem;
