--- a/src/components/dino_stepper/styles.css
+++ b/src/components/dino_stepper/styles.css
@@ -7,6 +7,10 @@
 	width: 100%;
 }
 
+.dino_stepper .MuiLinearProgress-colorPrimary {
+	background-color: var(--note-card-background);
+}
+
 .dino_stepper.MuiMobileStepper-root > :nth-child(2) {
 	justify-content: center;
 	width: 20%;
@@ -17,7 +21,7 @@
 }
 
 .dino_stepper .MuiLinearProgress-barColorPrimary {
-	background-color:  var(--button-font-color);
+	background-color:  var(--note-column-background);
 }
 
 .dino_stepper :is(.save__button, .cancel__button, .back__button, .next__button) {
