--- a/src/views/login/styles.css
+++ b/src/views/login/styles.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	padding-top: 15vh;
 	height: 100%;
-	background-color: var(--login-background);
+	background-color: var(--menu-and-headers-background);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
