Feat(char divider for staff list)

--- a/src/General.css
+++ b/src/General.css
@@ -40,3 +40,11 @@
 	flex: auto;
 	align-items: flex-end;
 }
+
+.dino__list__char_divider h4 {
+	padding: 0.6em 1.15em 0;
+}
+
+.dino__list__char_divider .dino_hr {
+	margin: 0 16px 4px;
+}
