--- a/src/components/status_indicator/styles.css
+++ b/src/components/status_indicator/styles.css
@@ -1,10 +1,9 @@
 .status_wrapper {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 20%;
     justify-content: space-between;   
     margin-top: 1em; 
-    margin-right: 1.83254em;
 }
 
 .status_wrapper svg {
@@ -28,8 +27,8 @@
 }
 
 .status_item {
-    width: 4rem;
-    height: 4rem;
+    width: 2.813rem;
+    height: 2.813rem;
     margin-left: 1rem; 
     display: grid;
 }
