--- a/src/components/dino_stepper/styles.css
+++ b/src/components/dino_stepper/styles.css
@@ -8,7 +8,7 @@
 }
 
 .dino_stepper .MuiLinearProgress-colorPrimary {
-	background-color: var(--note-card-background);
+	background-color: rgba(204, 204, 204, 0.5);
 }
 
 .dino_stepper.MuiMobileStepper-root > :nth-child(2) {
@@ -21,7 +21,7 @@
 }
 
 .dino_stepper .MuiLinearProgress-barColorPrimary {
-	background-color:  var(--note-column-background);
+	background-color: var(--note-card-background);
 }
 
 .dino_stepper :is(.save__button, .cancel__button, .back__button, .next__button) {
