fix (wrong colors on: save button, go back kids and button link)

--- a/src/components/button/link_button/styles.css
+++ b/src/components/button/link_button/styles.css
@@ -1,5 +1,5 @@
 button.link_button {
-	color: var(--buttons-font-color);
+	color: var(--link-font-color);
 	border: none;
 	background: none;
 	cursor: pointer;
