--- a/src/views/kids_space/game_menu/dino_runner/styles.css
+++ b/src/views/kids_space/game_menu/dino_runner/styles.css
@@ -4,6 +4,13 @@
 	height: 100vh;
 }
 
+
+.dino_runner_game .dino_icon_button__button svg {
+	width: 3rem;
+	height: 3rem;
+	fill: var(--dino-runner-game-details-color);
+}
+
 .dino_runner_game__grid {
 	position: absolute;
 	width: 100vw;
