--- a/src/views/kids_space/game_menu/memory_game/styles.css
+++ b/src/views/kids_space/game_menu/memory_game/styles.css
@@ -17,3 +17,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 12px;
 }
+
+.memory_game .dino_icon_button__button svg {
+	width: 3rem;
+	height: 3rem;
+	fill: var(--memory-game-piece-back-color);
+}
