--- a/src/views/kids_space/game_menu/tic_tac_dino/styles.css
+++ b/src/views/kids_space/game_menu/tic_tac_dino/styles.css
@@ -6,6 +6,12 @@
 	padding-top: 8vh;
 }
 
+.tic_tac_dino_game .dino_icon_button__button svg {
+	width: 3rem;
+	height: 3rem;
+	fill: var(--tic-tac-dino-go-back-arrow-color);
+}
+
 .tic_tac_dino_game .tic_tac__board {
 	margin: 3em auto;
 	background: var(--tic-tac-dino-background-color);
