--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -25,7 +25,7 @@
 	--musical-dino-game-button-background-color: #B94189;
 
 	/* Snake */
-	--snake-game-score-background-color: #f5f5f5;
+	--snake-game-details-color: #f5f5f5;
 
 	/* Dino Slider */
 	--dino-slider-game-button-background-color: #B054D1;
@@ -34,6 +34,7 @@
 	--tic-tac-dino-background-color: #cec1e7;
 	--tic-tac-dino-square-background-color: #d8cdec;
 	--tic-tac-dino-display-background-color: #c1e7e1b3;
+	--tic-tac-dino-go-back-arrow-color: #5E6A85;
 
 	/* Memory Game */
 	--memory-game-primary-background-color: #ffda91;
