Feat(mock data and item list menu on CalendarEventType list)

--- a/src/components/calendar/calendar_settings/styles.css
+++ b/src/components/calendar/calendar_settings/styles.css
@@ -1,3 +1,18 @@
-.event_type_item_list {
-    padding: 1.5rem;
+.event_type__list {
+	padding: 1.5rem 0.5rem;
+	list-style-type: none;
+}
+
+.event_type__list__item .MuiTypography-root {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	font-size: var(--small-font);
+}
+.event_type__list__item {
+	margin-bottom: 1rem;
+}
+
+.MuiListItemSecondaryAction-root {
+	display: flex;
 }
