--- a/src/components/calendar/calendar_settings_item/styles.css
+++ b/src/components/calendar/calendar_settings_item/styles.css
@@ -1,17 +1,17 @@
 .event_type_item__icon {
-    border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
-    background-color: lightcoral;
-    margin-right: 1rem;
+	border-radius: 50%;
+	width: 3rem;
+	height: 3rem;
+	background-color: #fafafa69;
+	margin-right: 1rem;
 }
 
 .event_type_item__wrapper {
-    align-items: center;
-    margin-bottom: 1rem;
+	align-items: center;
+	margin-bottom: 1rem;
 }
 
 .event_type_item__icon svg {
-    width: 100%;
-    padding: 0.5rem;
+	width: 100%;
+	padding: 0.5rem;
 }
