--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -19,44 +19,6 @@
 	text-align: center;
 }
 
-.settings__save_button_container {
-	position: fixed;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 80vw;
-	height: 8vh;
-	left: 10vw;
-	bottom: 1.5rem;
-}
-
-.settings__save_button {
-	width: 100%;
-	margin-top: auto;
-}
-
-.settings__save_button__icon {
-	width: 1.125rem;
-	height: 1.125rem;
-	margin-right: 0.6rem;
-	fill: var(--buttons-font-color);
-}
-
-.settings__save_button.MuiButtonBase-root {
-	margin-top: 3.125rem;
-	background-color: var(--buttons-background);
-}
-
-.settings__save_button.MuiButtonBase-root .MuiButton-label {
-	color: var(--light-color);
-}
-
-.button.settings__save_button {
-	width: 50%;
-	height: 90%;
-	font-size: var(--big-font);
-}
-
 .settings__title.MuiTypography-root {
 	font-weight: 700;
 	font-size: var(--big-font);
@@ -94,7 +56,7 @@
 	margin-left: 1rem;
 }
 
-.settings__change_password_dialog input{
+.settings__change_password_dialog input {
 	margin-bottom: 0.7rem;
 	width: 100%;
 	padding: 0.2rem;
@@ -109,21 +71,5 @@
 }
 
 .settings__change_password_dialog__error_message {
-	color: #FF7676;
-}
-
-@media (orientation: landscape) {
-	.settings__save_button_container {
-		bottom: 4.5rem;
-	}
-
-	.button.settings__save_button {
-		font-size: 1.4rem;
-	}
-
-	.button.settings__save_button svg {
-		width: 2.5rem;
-		height: 2.5rem;
-		margin-right: 1rem;
-	}
+	color: #ff7676;
 }
