fix(Reduced numbers size)

--- a/src/views/kids_space/game_menu/dino_slider/components/piece/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/components/piece/styles.css
@@ -15,8 +15,8 @@
   justify-self: center;
 }
 
-.dino_slider .dino_slider__piece .dino_slider__piece.reduced {
-  font-size: 11vmin;
+.dino_slider .dino_slider__piece.reduced {
+  font-size: 11vmin !important;
 }
 
 .dino_slider .dino_slider__piece.piece_0{
