--- a/src/Var.css
+++ b/src/Var.css
@@ -16,6 +16,7 @@
 
 	--svg-size: 1.125rem;
 
+	--calendar-default-background: #a6a6a6;
 	--calendar-medication-background: #4b75c3;
 	--calendar-event-background: #d783bb;
 	--calendar-reminder-background: #f0994d;
