--- a/src/components/calendar/calendar_settings/calendar_event_type_item/styles.css
+++ b/src/components/calendar/calendar_settings/calendar_event_type_item/styles.css
@@ -2,7 +2,7 @@
 	border-radius: 50%;
 	width: 3rem;
 	height: 3rem;
-	background-color: #fafafa69;
+	background-color: var(--calendar-default-background);
 	margin-right: 1rem;
 }
 
