(fix) alguns ajustes no kids space
- posição da barra de status no desktop
- posição dos corações no desktop
- pequeno ajuste numa tradução
- não contar um ponto no dino runner depois de morrer

--- a/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
+++ b/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
@@ -53,9 +53,19 @@
 	transition: visibility 0.2s 0.2s;
 }
 
+@media screen and (min-width: 768px){
+	.dinogotchi_screen__hearts{
+		left: 40vmin;
+	}
+}
+
 @media (orientation: landscape) {
 	.dinogotchi_screen__options .circular_button {
 		width: 7rem;
 		height: 7rem;
+	}
+
+	.dinogotchi_screen__hearts{
+		left: 50vmin;
 	}
 }
