Feat(EventCard with edit and delete but is broken)

--- a/src/views/main/calendar/calendar_card_event/styles.css
+++ b/src/views/main/calendar/calendar_card_event/styles.css
@@ -3,5 +3,8 @@
 }
 
 .time_wrapper{
+    margin-left: 1rem;
+    margin-right: 1rem;
     justify-content: space-between;
+    font-size: var(--big-font);
 }
