--- a/src/views/main/calendar/calendar_day/styles.css
+++ b/src/views/main/calendar/calendar_day/styles.css
@@ -7,9 +7,10 @@
 .day_number_wrapper {
 	width: 20%;
 	text-align: center;
+	margin-right: 0.75em;
 }
 .day_number_wrapper.today {
-	border-radius: 40%;
+	border-radius: 50%;
 	background-color: #cbbab4;
 }
 
