--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -11,6 +11,7 @@
 .home .home__grid__button {
 	padding: 0rem;
 	border-radius: 0.5rem;
+	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
 
 .home__grid__item {
@@ -74,6 +75,7 @@ p.home__grid__item__name {
 }
 
 .info__grid__item {
+	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 	width: 100%;
 	height: 2.5rem;
 	background-color: var(--menu-buttons-background);
