Feat(new EventView and card design)

--- a/src/views/main/calendar/calendar_settings/calendar_event_type_item/styles.css
+++ b/src/views/main/calendar/calendar_settings/calendar_event_type_item/styles.css
@@ -1,18 +1,9 @@
-.event_type_item__icon {
-	border-radius: 50%;
+.event_type__list__item svg.event_type__icon {
 	width: 3rem;
 	height: 3rem;
-	background-color: var(--calendar-default-background);
-	margin-right: 1rem;
 }
 
 .event_type_item__wrapper {
 	align-items: center;
 	margin-bottom: 1rem;
-}
-
-.event_type_item__icon svg {
-	width: 100%;
-	height: inherit;
-	padding: 0 0.5rem;
 }
