--- a/src/MaterialUI.css
+++ b/src/MaterialUI.css
@@ -40,6 +40,9 @@ body .MuiInput-underline:before {
 body .MuiInputBase-root {
 	font-size: var(--default-font);
 }
+body .MuiPaper-rounded {
+	border-radius: 10px;
+}
 
 /* para as labels dos textos deixarem de ser cortadas verticalmente */
 body .MuiFormLabel-root.MuiInputLabel-root.MuiInputLabel-animated {
