--- a/src/components/button/save_button/styles.css
+++ b/src/components/button/save_button/styles.css
@@ -5,11 +5,11 @@
 	max-width: 50vh;
 }
 
-.save_button__icon {
+.save_button__icon svg{
 	width: 1.125rem;
 	height: 1.125rem;
 	margin-right: 0.6rem;
-	fill: var(--inv-contrast-color);
+	fill: var(--base-font-color);
 }
 
 .save_button .MuiButton-label {
