--- a/src/components/color_pallete/styles.css
+++ b/src/components/color_pallete/styles.css
@@ -8,9 +8,11 @@
 	box-shadow: 0 0 0 2pt #ff9d00;
 }
 
-.color_palette__popover .MuiPaper-root.MuiPopover-paper {
-	padding: 0.5rem;
+.color_palette__popover .color_palette__popover__options {
 	display: grid;
 	grid-gap: 0.5rem;
 	grid-template-columns: 1fr 1fr 1fr;
+}
+.color_palette__popover__wrapper {
+	padding: 0.5rem;
 }
