--- a/src/views/kids_space/game_menu/dino_slider/components/board/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/components/board/styles.css
@@ -8,11 +8,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: #FAFAFA;
   border-radius: 40%;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 4px 4px rgb(255 255 255 / 25%);
   align-self: center;
   justify-self: center;
+  transition-property: left, top, transform;
+  transition-duration: 250ms, 250ms, 100ms;
+  transform: scale(1);
 }
 
 .dino_slider .dino_slider__piece.reduced {
