--- a/src/views/kids_space/game_menu/dino_slider/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/styles.css
@@ -8,12 +8,11 @@
 
 .dino_slider .dino_slider__board {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 22vmin 22vmin 22vmin 22vmin;
   margin-top: 15vh;
   width: 90vmin;
   height: 90vmin;
   margin: auto;
-
 }
 
 .dino_slider__header .dino_icon_button__button svg {
