--- a/src/Var.css
+++ b/src/Var.css
@@ -69,6 +69,7 @@
 	--dino-icon-color-3: #9c27b0;
 	--dino-icon-color-4: #2196f3;
 	--dino-icon-color-5: #4caf50;
+	--dino-icon-color-null: #bdbdbd;
 
 	/* #endregion */
 }
