feat(troquei o select do forms pelo autocomplete)

--- a/src/components/calendar/select_time/styles.css
+++ b/src/components/calendar/select_time/styles.css
@@ -7,3 +7,8 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.padding_adjustment{
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+}
