--- a/src/views/main/calendar/calendar_settings/styles.css
+++ b/src/views/main/calendar/calendar_settings/styles.css
@@ -16,3 +16,8 @@
 .MuiListItemSecondaryAction-root {
 	display: flex;
 }
+
+.calendar_settings .list__title {
+	padding-top: 1.2rem;
+	margin-bottom: -0.5em;
+}
