--- a/src/General.css
+++ b/src/General.css
@@ -42,7 +42,8 @@
 }
 
 .dino__list__char_divider h4 {
-	padding: 0.6em 1.15em 0;
+	padding: 0.6em 1.5em 0;
+	font-size: 1.2rem;
 	color: var(--menu-and-titles-font-color);
 }
 
